PROJECT(libGDL90)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
SET(LIBGDL90_STATIC TRUE CACHE BOOL "Enable static build of libGDL90.")

SET(LIBGDL90_SOURCE_FILES
	"src/GDL90.c"
)

SET(LIBGDL90_HEADER_FILES
	"src/GDL90.h"
)

INCLUDE_DIRECTORIES(src)

SOURCE_GROUP("Header Files" FILES ${LIBGDL90_HEADER_FILES})
SOURCE_GROUP("Source Files" FILES ${LIBGDL90_SOURCE_FILES})

SET(LIBGDL90_LIBRARY_TYPE SHARED)

IF(LIBGDL90_STATIC)
	SET(LIBGDL90_LIBRARY_TYPE STATIC)
ENDIF()

IF(NOT WIN32)
	SET(CMAKE_C_FLAGS "-W -Wall -Wno-unused-parameter -std=c90 -pedantic")
ENDIF(NOT WIN32)

ADD_LIBRARY(libGDL90 ${LIBGDL90_LIBRARY_TYPE}
	${LIBGDL90_HEADER_FILES}
	${LIBGDL90_SOURCE_FILES}
)

IF(NOT WIN32)
	TARGET_LINK_LIBRARIES(libGDL90 dl)
ENDIF()

ADD_EXECUTABLE(gdl90-test-heartbeat "test/test-heartbeat.c")
TARGET_LINK_LIBRARIES(gdl90-test-heartbeat libGDL90)

ADD_EXECUTABLE(gdl90-test-ownship "test/test-ownship.c")
TARGET_LINK_LIBRARIES(gdl90-test-ownship libGDL90)
